# ASYNC_INTEGRATION_FOUNDATION

./: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  PUBLISH.md  README.md  index.ts  package.json  pyproject.toml  tsconfig.json
.github/workflows/: npm-publish.yml
docs/examples/: swimlane-live-update.md  timesheet-commit.md
docs/framework/: dispatch-lifecycle.md  extensibility.md  message-contract.md  queue-inspection.md  queue-model.md  retry-and-dead-letter.md  state-model.md
src/async_integration_foundation/: __init__.py  queue_builders.py
src/async_integration_foundation/contracts/: activity.py  dispatcher.py  mapper.py  persistence.py  policy.py  transport.py
src/async_integration_foundation/domain/: models.py  state_machine.py
src/async_integration_foundation/examples/: swimlane.py  timesheet.py
src/async_integration_foundation/implementations/: in_memory.py  mock_transport.py  orchestrator.py  queue_services.py
tests/: README.md  test_queue_inspection.py  test_reference_dispatch.py  test_runtime_queue_api.py  test_state_machine.py
